[package]
name = "noiseexplorer"
version = "1.0.2"
authors = ["Symbolic Software <georgio@symbolic.software>"]
edition = "2018"

[dependencies]
noiseexplorer_i1k = {version = "1.0.2", path = "./I1K"}
noiseexplorer_i1k1 = {version = "1.0.2", path = "./I1K1"}
noiseexplorer_i1n = {version = "1.0.2", path = "./I1N"}
noiseexplorer_i1x = {version = "1.0.2", path = "./I1X"}
noiseexplorer_i1x1 = {version = "1.0.2", path = "./I1X1"}
noiseexplorer_ik = {version = "1.0.2", path = "./IK"}
noiseexplorer_ik1 = {version = "1.0.2", path = "./IK1"}
noiseexplorer_ikpsk1 = {version = "1.0.2", path = "./IKpsk1"}
noiseexplorer_ikpsk2 = {version = "1.0.2", path = "./IKpsk2"}
noiseexplorer_in = {version = "1.0.2", path = "./IN"}
noiseexplorer_inpsk1 = {version = "1.0.2", path = "./INpsk1"}
noiseexplorer_inpsk2 = {version = "1.0.2", path = "./INpsk2"}
noiseexplorer_ix = {version = "1.0.2", path = "./IX"}
noiseexplorer_ix1 = {version = "1.0.2", path = "./IX1"}
noiseexplorer_ixpsk2 = {version = "1.0.2", path = "./IXpsk2"}
noiseexplorer_k = {version = "1.0.2", path = "./K"}
noiseexplorer_k1k = {version = "1.0.2", path = "./K1K"}
noiseexplorer_k1k1 = {version = "1.0.2", path = "./K1K1"}
noiseexplorer_k1n = {version = "1.0.2", path = "./K1N"}
noiseexplorer_k1x = {version = "1.0.2", path = "./K1X"}
noiseexplorer_k1x1 = {version = "1.0.2", path = "./K1X1"}
noiseexplorer_kk = {version = "1.0.2", path = "./KK"}
noiseexplorer_kk1 = {version = "1.0.2", path = "./KK1"}
noiseexplorer_kkpsk0 = {version = "1.0.2", path = "./KKpsk0"}
noiseexplorer_kkpsk2 = {version = "1.0.2", path = "./KKpsk2"}
noiseexplorer_kn = {version = "1.0.2", path = "./KN"}
noiseexplorer_knpsk0 = {version = "1.0.2", path = "./KNpsk0"}
noiseexplorer_knpsk2 = {version = "1.0.2", path = "./KNpsk2"}
noiseexplorer_kpsk0 = {version = "1.0.2", path = "./Kpsk0"}
noiseexplorer_kx1 = {version = "1.0.2", path = "./KX1"}
noiseexplorer_kxpsk2 = {version = "1.0.2", path = "./KXpsk2"}
noiseexplorer_kx = {version = "1.0.2", path = "./KX"}
noiseexplorer_n = {version = "1.0.2", path = "./N"}
noiseexplorer_npsk0 = {version = "1.0.2", path = "./Npsk0"}
noiseexplorer_nxpsk2 = {version = "1.0.2", path = "./NXpsk2"}
noiseexplorer_nk1 = {version = "1.0.2", path = "./NK1"}
noiseexplorer_nk = {version = "1.0.2", path = "./NK"}
noiseexplorer_nkpsk0 = {version = "1.0.2", path = "./NKpsk0"}
noiseexplorer_nn = {version = "1.0.2", path = "./NN"}
noiseexplorer_nnpsk0 = {version = "1.0.2", path = "./NNpsk0"}
noiseexplorer_nkpsk2 = {version = "1.0.2", path = "./NKpsk2"}
noiseexplorer_nnpsk2 = {version = "1.0.2", path = "./NNpsk2"}
noiseexplorer_nx = {version = "1.0.2", path = "./NX"}
noiseexplorer_nx1 = {version = "1.0.2", path = "./NX1"}
noiseexplorer_x = {version = "1.0.2", path = "./X"}
noiseexplorer_xk = {version = "1.0.2", path = "./XK"}
noiseexplorer_xkpsk3 = {version = "1.0.2", path = "./XKpsk3"}
noiseexplorer_xk1 = {version = "1.0.2", path = "./XK1"}
noiseexplorer_xpsk1 = {version = "1.0.2", path = "./Xpsk1"}
noiseexplorer_xn = {version = "1.0.2", path = "./XN"}
noiseexplorer_xnpsk3 = {version = "1.0.2", path = "./XNpsk3"}
noiseexplorer_xx = {version = "1.0.2", path = "./XX"}
noiseexplorer_xxpsk3 = {version = "1.0.2", path = "./XXpsk3"}
noiseexplorer_xx1 = {version = "1.0.2", path = "./XX1"}
noiseexplorer_x1x1 = {version = "1.0.2", path = "./X1X1"}
noiseexplorer_x1n = {version = "1.0.2", path = "./X1N"}
noiseexplorer_x1k = {version = "1.0.2", path = "./X1K"}
noiseexplorer_x1k1 = {version = "1.0.2", path = "./X1K1"}
noiseexplorer_x1x = {version = "1.0.2", path = "./X1X"}
hex = "0.3.2"