[package]
name = "noiseexplorer_in_wasm"
version = "1.0.6"
authors = ["Symbolic Software <georgio@symbolic.software>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake2-rfc = "0.2.18"
constant_time_eq = "0.4.2"
chacha20-poly1305-aead = {version = "0.1.2", git = "https://github.com/symbolicsoft/chacha20-poly1305-aead"}
getrandom = { version = "0.4.1", features = ["wasm_js"] }
hex = "0.4.3"
rust-crypto-wasm = "0.3.1"
zeroize = "1.8.2"
wasm-bindgen = "0.2.111"

[dev-dependencies]
wasm-bindgen-test = "0.3.61"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
